--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             return <span ref={containerRef} className={`inline-flex items-center justify-center shrink-0 ${className}`} style={{ width: size, height: size }}></span>;
         };
 
-        const STORAGE_KEY = "rummy_scorer_prod_v1";
+        const STORAGE_KEY = "rummy_scorer_prod_v1_fixed";
         const THEME_KEY = "rummy_scorer_theme_pref";
         const DEFAULT_ROSTER = ['Player 1', 'Player 2', 'Player 3'];
 
@@ -141,7 +141,7 @@
 
             return (
                 <div className="flex flex-col items-center mb-6 relative z-20">
-                    <div className="text-[10px] font-black uppercase tracking-[0.3em] mb-3 opacity-50 text-center">Patriotism in every hand</div>
+                    <div className="text-[10px] font-black uppercase tracking-[0.3em] mb-3 opacity-50 text-center">Republic Day Countdown</div>
                     {timeLeft.finished ? (
                         <div className={`${isDarkMode ? 'bg-orange-600/30 text-orange-400' : 'bg-orange-500 text-white'} backdrop-blur-md px-10 py-2 rounded-full text-xs font-black uppercase tracking-[0.2em] inline-block border border-orange-500/30 shadow-2xl animate-pulse`}>
                             Happy Republic Day 2026
@@ -248,7 +248,7 @@
             </div>
         );
 
-        // --- Main App Logic ---
+        // --- Main App Component ---
 
         const App = () => {
             const [showWelcome, setShowWelcome] = useState(true);
@@ -284,9 +284,14 @@
                 document.body.style.backgroundColor = isDarkMode ? "#020617" : "#f1f5f9";
             }, [game, isDarkMode]);
 
+            useEffect(() => {
+                if (!showWelcome && scrollRef.current && game.rounds.length > 0) {
+                    scrollRef.current.scrollTo({ top: scrollRef.current.scrollHeight, behavior: 'smooth' });
+                }
+            }, [game.rounds, showWelcome]);
+
             const isPlayerLocked = (pIdx) => {
                 if (!ui.bust) return false;
-                // Re-entry is allowed if ANY active player who did NOT bust this hand is below 180.
                 const safeOpponents = ui.bust.proj.filter((t, idx) => 
                     idx !== pIdx && !inactive.includes(idx) && !ui.bust.idxs.includes(idx)
                 );
@@ -337,6 +342,24 @@
                     setGame(g => ({ ...g, inactive: upIn, reEntries: upRe }));
                     setUi(u => ({ ...u, bust: { ...u.bust, current: remaining[0], idxs: remaining, pending: scores } }));
                 }
+            };
+
+            const midGameJoin = () => {
+                if(!form.name.trim()) return;
+                const activeHigh = activeTotals.length > 0 ? Math.max(...activeTotals) : 0;
+                setGame(g => ({
+                    ...g, players: [...g.players, form.name.trim()], 
+                    reEntries: [...(g.reEntries || Array(g.players.length).fill(0)), 0],
+                    rounds: g.rounds.map((r, i) => i === 0 ? [...r, activeHigh + 1] : [...r, 0])
+                }));
+                setForm(f => ({ ...f, name: '' }));
+            };
+
+            const savePlayerNameEdit = (idx) => {
+                if (!form.editVal.trim()) return;
+                const up = [...players]; up[idx] = form.editVal.trim();
+                setGame(prev => ({ ...prev, players: up }));
+                setForm(f => ({ ...f, editIdx: null, editVal: '' }));
             };
 
             const startNewMatch = () => {
@@ -416,7 +439,7 @@
                                 <button onClick={() => setUi({...ui, add: true})} className="flex-1 h-16 bg-orange-600 hover:bg-orange-500 text-white rounded-3xl font-black uppercase tracking-[0.2em] shadow-xl flex items-center justify-center gap-3 transition-all active:scale-95"><Icon name="plus" size={24} /> Record Hand</button>
                                 <button onClick={() => {
                                     const text = `🇮🇳 Rummy Scorer Standings 🇮🇳\n\n` + players.map((p, i) => `${p}: ${totals[i]}${reEntries[i] > 0 ? ` (R${reEntries[i]})` : ''}${inactive.includes(i) ? ' (Out)' : ''}`).join('\n');
-                                    if(navigator.share) navigator.share({text}); else { const el = document.createElement('textarea'); el.value = text; document.body.appendChild(el); el.select(); document.execCommand('copy'); document.body.removeChild(el); setUi(u=>({...u, confirm: {msg: "Copied to clipboard!", fn: () => setUi(us=>({...us, confirm: null})) } })); }
+                                    if(navigator.share) navigator.share({text}); else { const el = document.createElement('textarea'); el.value = text; document.body.appendChild(el); el.select(); document.execCommand('copy'); document.body.removeChild(el); setUi(u=>({...u, confirm: {msg: "Standings copied to clipboard!", fn: () => setUi(us=>({...us, confirm: null})) } })); }
                                 }} className="px-6 h-16 rounded-2xl font-black shadow-xl flex items-center justify-center bg-slate-800 text-orange-400 transition-all active:scale-95"><Icon name="share-2" size={24} /></button>
                             </div>
                         )}
@@ -452,7 +475,22 @@
                                 <div className={`w-full max-w-md rounded-[2.5rem] p-8 shadow-2xl border ${isDarkMode ? 'bg-slate-900 border-white/10 text-white' : 'bg-white border-slate-200 text-slate-900'}`}>
                                     <h3 className="text-xl font-black text-indigo-400 uppercase mb-6 flex items-center gap-3 tracking-tighter"><Icon name="history" /> History Log</h3>
                                     <div className="space-y-4 max-h-[60vh] overflow-y-auto pr-1 no-scrollbar">
-                                        {sessionHistory.length === 0 ? <div className="py-20 text-center opacity-20 text-xs font-black uppercase italic tracking-widest">No Archives</div> : sessionHistory.map((log) => (<div key={log.id} className={`p-4 rounded-2xl border ${isDarkMode ? 'bg-black/20 border-white/5 shadow-inner' : 'bg-white border-slate-100 shadow-sm'}`}><div className="flex justify-between mb-3 border-b border-white/5 pb-2 text-orange-500 font-black tracking-widest"><span className="text-[10px]">{new Date(log.id).toLocaleDateString()}</span><button onClick={() => restoreSession(log)} className="text-[8px] bg-rose-600 text-white px-2 py-1 rounded font-black uppercase transition-all active:scale-90">Restore</button></div><div className="grid grid-cols-2 gap-2">{log.players.map((pName, pIdx) => (<div key={pIdx} className="flex items-center justify-between text-[10px] opacity-80 truncate"><span>{pName}</span><span className="font-bold">{log.finalScores[pIdx]}</span></div>))}</div></div>))}
+                                        {sessionHistory.length === 0 ? <div className="py-20 text-center opacity-20 text-xs font-black uppercase italic tracking-widest text-center">No Archives</div> : sessionHistory.map((log) => (
+                                            <div key={log.id} className={`p-4 rounded-2xl border ${isDarkMode ? 'bg-black/20 border-white/5 shadow-inner' : 'bg-white border-slate-100 shadow-sm'}`}>
+                                                <div className="flex justify-between mb-3 border-b border-white/5 pb-2 text-yellow-500 font-black tracking-widest">
+                                                    <span className="text-[10px]">{new Date(log.id).toLocaleDateString()}</span>
+                                                    <button onClick={() => restoreSession(log)} className="text-[8px] bg-rose-600 text-white px-2 py-1 rounded font-black uppercase transition-all active:scale-90">Restore</button>
+                                                </div>
+                                                <div className="grid grid-cols-2 gap-2">
+                                                    {log.players.map((pName, pIdx) => (
+                                                        <div key={pIdx} className="flex items-center justify-between text-[10px] opacity-80 truncate">
+                                                            <span>{pName}</span>
+                                                            <span className="font-bold">{log.finalScores[pIdx]}</span>
+                                                        </div>
+                                                    ))}
+                                                </div>
+                                            </div>
+                                        ))}
                                     </div>
                                     <button onClick={() => setUi({...ui, history: false})} className="w-full mt-8 py-5 bg-slate-950 text-white rounded-2xl font-black uppercase text-xs border border-white/5 transition-all active:scale-95">Close Log</button>
                                 </div>
@@ -460,9 +498,26 @@
 
                             {ui.bust && (
                                 <div className={`w-full max-sm rounded-[2.5rem] p-8 shadow-2xl border animate-in zoom-in-95 ${isDarkMode ? 'bg-slate-900 text-white border-white/10' : 'bg-white border-slate-200 text-slate-900'}`}>
-                                    <div className="text-center mb-8"><div className="w-16 h-16 bg-rose-500/10 rounded-full flex items-center justify-center mx-auto mb-4 text-rose-500"><Icon name={isPlayerLocked(ui.bust.current) ? "lock" : "door-open"} size={32}/></div><h3 className="text-2xl font-black uppercase italic mb-4 tracking-tighter leading-none">Bust Alert!</h3><p className="text-xs font-bold uppercase opacity-60 px-4 leading-relaxed tracking-tighter text-center">{players[ui.bust.current]} passed 200. <br/>{isPlayerLocked(ui.bust.current) ? "The Door is Closed. Remaining safe opponent is at 180+." : `Re-buy handicap entry at ${ui.bust.target}?`}</p></div>
+                                    <div className="text-center mb-8">
+                                        <div className="w-16 h-16 bg-rose-500/10 rounded-full flex items-center justify-center mx-auto mb-4 text-rose-500">
+                                            <Icon name={isPlayerLocked(ui.bust.current) ? "lock" : "door-open"} size={32}/>
+                                        </div>
+                                        <h3 className="text-2xl font-black uppercase italic mb-4 tracking-tighter leading-none">Bust Alert!</h3>
+                                        <p className="text-xs font-bold uppercase opacity-60 px-4 leading-relaxed tracking-tighter text-center">
+                                            {players[ui.bust.current]} passed 200. <br/>
+                                            {isPlayerLocked(ui.bust.current) 
+                                                ? "The Door is Closed. Remaining safe opponent is at 180+." 
+                                                : `Re-buy handicap entry at ${ui.bust.target}?`}
+                                        </p>
+                                    </div>
                                     <div className="grid grid-cols-2 gap-4">
-                                        <button onClick={() => solveBust(true)} disabled={isPlayerLocked(ui.bust.current)} className={`py-5 rounded-2xl text-xs font-black uppercase shadow-xl transition-all ${isPlayerLocked(ui.bust.current) ? 'bg-slate-800 text-slate-600 opacity-20 shadow-none cursor-not-allowed' : 'bg-orange-600 text-white btn-active shadow-lg'}`}>Re-entry</button>
+                                        <button 
+                                            onClick={() => solveBust(true)} 
+                                            disabled={isPlayerLocked(ui.bust.current)} 
+                                            className={`py-5 rounded-2xl text-xs font-black uppercase shadow-xl transition-all ${isPlayerLocked(ui.bust.current) ? 'bg-slate-800 text-slate-600 opacity-20 shadow-none cursor-not-allowed' : 'bg-orange-600 text-white btn-active shadow-lg'}`}
+                                        >
+                                            Re-entry
+                                        </button>
                                         <button onClick={() => solveBust(false)} className="bg-rose-700 py-5 text-white rounded-2xl text-xs font-black uppercase btn-active shadow-xl tracking-widest transition-all active:scale-95">Stay Out</button>
                                     </div>
                                 </div>
@@ -472,7 +527,10 @@
                                 <div className="w-full max-w-xs rounded-[2.5rem] p-8 bg-slate-950 border border-white/10 text-center shadow-2xl animate-in zoom-in-95">
                                     <Icon name="alert-triangle" size={32} className="text-orange-500 mb-4 mx-auto" />
                                     <p className="text-sm font-black uppercase text-slate-200 mb-8 leading-tight tracking-tight text-center">{ui.confirm.msg}</p>
-                                    <div className="flex gap-2"><button onClick={ui.confirm.fn} className="flex-1 py-4 bg-orange-600 text-white rounded-xl text-[10px] font-black uppercase transition-all active:scale-95">Yes</button><button onClick={() => setUi({...ui, confirm: null})} className="flex-1 py-4 bg-slate-800 text-white rounded-xl text-[10px] font-black uppercase transition-all active:scale-95">No</button></div>
+                                    <div className="flex gap-2">
+                                        <button onClick={ui.confirm.fn} className="flex-1 py-4 bg-orange-600 text-white rounded-xl text-[10px] font-black uppercase transition-all active:scale-95">Yes</button>
+                                        <button onClick={() => setUi({...ui, confirm: null})} className="flex-1 py-4 bg-slate-800 text-white rounded-xl text-[10px] font-black uppercase transition-all active:scale-95">No</button>
+                                    </div>
                                 </div>
                             )}
                         </div>
